--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,1 +1,8 @@
-/* Enter your custom styles here */
+.no-data-title span {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.no-data-title  {
+  margin-bottom: 2rem !important;
+}
